--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p><em>This paper is written in an exploratory style, focusing on conceptual development rather than formal journal presentation.</em></p>
       <div class="links">
         <a href="papers/entropy-dispersion.pdf" target="_blank">View PDF</a>
-        <a href="https://doi.org/10.5281/zenodo.16982613" target="_blank">Preprint 1</a>
+        <a href="https://doi.org/10.5281/zenodo.16982613" target="_blank">Preprint Zenodo</a>
         <a href="#" target="_blank">Preprint 2</a>
         <a href="#" class="journal-link" data-modal="modal1">Journal</a>
       </div>
@@ -219,3 +219,4 @@
   </script>
 </body>
 </html>
+
