--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <p><em>This paper is written in an exploratory style, focusing on conceptual development rather than formal journal presentation.</em></p>
       <div class="links">
         <a href="papers/motion-ste.pdf" target="_blank">View PDF</a>
-        <a href="https://doi.org/10.5281/zenodo.16983075" target="_blank">Preprint 1</a>
+        <a href="https://doi.org/10.5281/zenodo.16983075" target="_blank">Preprint Zenodo</a>
         <a href="#" target="_blank">Preprint 2</a>
         <a href="#" class="journal-link" data-modal="modal2">Journal</a>
       </div>
@@ -92,7 +92,7 @@
       </p>
       <div class="links">
         <a href="papers/A Conceptual Framework for a Cosmic Time System Based on Photon Travel.pdf" target="_blank">View PDF</a>
-        <a href="https://doi.org/10.5281/zenodo.16991136" target="_blank">Preprint 1</a>
+        <a href="https://doi.org/10.5281/zenodo.16991136" target="_blank">Preprint Zenodo</a>
         <a href="#" target="_blank">Preprint 2</a>
         <a href="#" class="journal-link" data-modal="modal3">Journal</a>
       </div>
@@ -114,7 +114,7 @@
       </p>
       <div class="links">
         <a href="papers/hyperoperations.pdf" target="_blank">View PDF</a>
-        <a href="https://doi.org/10.5281/zenodo.16981501" target="_blank">Preprint 1</a>
+        <a href="https://doi.org/10.5281/zenodo.16981501" target="_blank">Preprint Zenodo</a>
         <a href="#" target="_blank">Preprint 2</a>
         <a href="#" class="journal-link" data-modal="modal4">Journal</a>
       </div>
@@ -146,7 +146,7 @@
       </p>
       <div class="links">
         <a href="papers/motion-derivatives.pdf" target="_blank">View PDF</a>
-        <a href="https://doi.org/10.5281/zenodo.16982147" target="_blank">Preprint 1</a>
+        <a href="https://doi.org/10.5281/zenodo.16982147" target="_blank">Preprint Zenodo</a>
         <a href="#" target="_blank">Preprint 2</a>
         <a href="#" class="journal-link" data-modal="modal5">Journal</a>
       </div>
@@ -219,4 +219,5 @@
   </script>
 </body>
 </html>
+
 
