--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <h1> Έργα </h1>
     <p class="note">
-      Note: Occasionally, a preprint link may display a “Bad Gateway” or another error. If this occurs, simply close the error window and reopen the link after a few seconds.
+      Note: Occasionally, an preprint link may display a “Bad Gateway” or another error. If this occurs, simply close the error window and reopen the link after a few seconds.
     </p>
   </header>
 
@@ -219,5 +219,6 @@
   </script>
 </body>
 </html>
+
 
 
